--- a/public/assets/css/user.css
+++ b/public/assets/css/user.css
@@ -50,11 +50,18 @@
 }
 
 .flexbox-container2 {
-    height: 630px;
+    min-height: 630px;
     border: 1px solid black;
     margin: 3% 8% 8% 8% ;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .game {
-
+    height: 400px;
+    width: 400px;
+    outline: 1px solid black;
+    margin: 2% 4% 2% 4%;
+    background-color: #567D9A;
 }
