--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -1,296 +1,340 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-  }
-  
-  body {
-    background: #171370;
-  }
-  /* Scroll Bar */
-  ::-webkit-scrollbar {
-    width: 12px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: #1aeeef;
-    border-radius: 6px;
-  }
-  
-  header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 7px 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #1b2141;
-    transition: 0.5s;
-    z-index: 1000;
-  }
-  
-  header.sticky {
-    background: #1b2141;
-    box-shadow: 0 5px 10px rgba(249, 248, 248, 0.201);
-  }
-  
-  header .logo {
-    position: relative;
-    color: #fff;
-    text-decoration: none;
-    font-size: 2em;
-    font-weight: 700;
-  }
-  
-  header .nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  header ul li {
-    list-style: none;
-    margin: 10px;
-  }
-  
-  header ul li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-  }
-  
-  header ul li a:hover {
-    background: #1aeeef;
-    color: black;
-    box-shadow: 0 0 10px #1aeeef;
-  }
-  
-  header .action .searchBx {
-    padding: 5px;
-    margin: 5px;
-    justify-content: center;
-    background: #fff;
-    border-radius: 5px;
-  }
-  
-  header .action .searchBx i {
-    font-size: 1.4em;
-    margin: 5px;
-    color: #222;
-  }
-  
-  header .action .searchBx input {
-    outline: none;
-    border: none;
-    font-size: 1em;
-    color: #222;
-  }
-  
-  /* Home Banner */
-  
-  .banner {
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    padding: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .banner .bg {
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .banner .bg .content {
-    width: 50%;
-    height: 100%;
-  }
-  
-  .banner .bg .content h2 {
-    font-size: 1em;
-    color: #fff;
-    letter-spacing: 1px;
-  }
-  
-  .banner .bg .content p {
-    font-size: 1em;
-    color: #dbd9d9;
-    letter-spacing: 1px;
-  }
-  
-  .banner .bg .content a {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 20px 0;
-    border: 1px solid #1aeeef;
-    text-decoration: none;
-    font-weight: 700;
-    border-radius: 5px;
-    color: #fff;
-    letter-spacing: 1px;
-  }
-  
-  .banner .bg .content a:hover {
-    background: #1aeeef;
-    border: none;
-    color: #171370;
-    box-shadow: 0 0 10px #1aeeef;
-  }
-  
-  .banner .bg img {
-    width: 400px;
-    height: 550px;
-  }
-  
-  /* About */
-  
-  .about {
-    position: relative;
-    width: 100%;
-    min-height: 75vh;
-    padding: 0px 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .about .contentBx {
-    width: 50%;
-    margin: 20px;
-  }
-  
-  .about .contentBx h2 {
-    font-size: 3em;
-    font-weight: 700;
-    color: #fff;
-  }
-  
-  .about .contentBx p {
-    max-width: 600px;
-    text-align: justify;
-    color: #dbd9d9;
-  }
-  
-  .about .contentBx a {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 20px 0;
-    border: 1px solid #1aeeef;
-    text-decoration: none;
-    font-weight: 700;
-    border-radius: 5px;
-    color: #fff;
-    letter-spacing: 1px;
-  }
-  
-  .about .contentBx a:hover {
-    background: #1aeeef;
-    border: none;
-    color: #171370;
-    box-shadow: 0 0 10px #1aeeef;
-  }
-  
-  /* Games */
-  
-  .games {
-    padding: 0px 100px;
-    width: 100%;
-    min-width: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 40px auto;
-  }
-  
-  .games h2 {
-    color: #fff;
-    margin: 10px 0;
-  }
-  
-  .games ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-  
-  .games ul li {
-    list-style: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    margin: 5px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    color: #fff;
-  }
-  
-  .games ul li.active {
-    background: #1aeeef;
-    color: #050e2d;
-    box-shadow: 0 0 10px #1aeeef;
-  }
-  
-  .games .cardBx {
-    width: 100%;
-    min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .games .cardBx .card {
-    width: 280px;
-    border-radius: 10px;
-    margin: 20px 40px;
-    background: #171370;
-    overflow: hidden;
-  }
-  
-  .games .cardBx .card img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-  }
-  
-  .games .cardBx .card .content {
-    padding: 10px;
-  }
-  
-  .games .cardBx .card .content h4 {
-    color: #fff;
-    margin: 15px 0;
-  }
-  
-  .games .cardBx .card .process-line {
-    position: relative;
-    height: 10px;
-    width: 100%;
-    background: #35407e;
-    margin-bottom: 15px;
-    border-radius: 10px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+body {
+  background: #171370;
+}
+/* Scroll Bar */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #1aeeef;
+  border-radius: 6px;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 7px 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #1b2141;
+  transition: 0.5s;
+  z-index: 1000;
+}
+
+header.sticky {
+  background: #1b2141;
+  box-shadow: 0 5px 10px rgba(249, 248, 248, 0.201);
+}
+
+header .logo {
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+  font-size: 2em;
+  font-weight: 700;
+}
+
+header .nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header ul li {
+  list-style: none;
+  margin: 10px;
+}
+
+header ul li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+header ul li a:hover {
+  background: #1aeeef;
+  color: black;
+  box-shadow: 0 0 10px #1aeeef;
+}
+
+header .action .searchBx {
+  padding: 5px;
+  margin: 5px;
+  justify-content: center;
+  background: #fff;
+  border-radius: 5px;
+}
+
+header .action .searchBx i {
+  font-size: 1.4em;
+  margin: 5px;
+  color: #222;
+}
+
+header .action .searchBx input {
+  outline: none;
+  border: none;
+  font-size: 1em;
+  color: #222;
+}
+
+/* Home Banner */
+
+.banner {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner .bg {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner .bg .content {
+  width: 50%;
+  height: 100%;
+}
+
+.banner .bg .content h2 {
+  font-size: 1em;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.banner .bg .content p {
+  font-size: 1em;
+  color: #dbd9d9;
+  letter-spacing: 1px;
+}
+
+.banner .bg .content a {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border: 1px solid #1aeeef;
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 5px;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.banner .bg .content a:hover {
+  background: #1aeeef;
+  border: none;
+  color: #171370;
+  box-shadow: 0 0 10px #1aeeef;
+}
+
+.banner .bg img {
+  width: 400px;
+  height: 550px;
+}
+
+/* About */
+
+.about {
+  position: relative;
+  width: 100%;
+  min-height: 75vh;
+  padding: 0px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.about .contentBx {
+  width: 50%;
+  margin: 20px;
+}
+
+.about .contentBx h2 {
+  font-size: 3em;
+  font-weight: 700;
+  color: #fff;
+}
+
+.about .contentBx p {
+  max-width: 600px;
+  text-align: justify;
+  color: #dbd9d9;
+}
+
+.about .contentBx a {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border: 1px solid #1aeeef;
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 5px;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.about .contentBx a:hover {
+  background: #1aeeef;
+  border: none;
+  color: #171370;
+  box-shadow: 0 0 10px #1aeeef;
+}
+
+/* Games */
+
+.games {
+  padding: 0px 100px;
+  width: 100%;
+  min-width: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 40px auto;
+}
+
+.games h2 {
+  color: #fff;
+  margin: 10px 0;
+}
+
+.games ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.games ul li {
+  list-style: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin: 5px;
+  letter-spacing: 1px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.games ul li.active {
+  background: #1aeeef;
+  color: #050e2d;
+  box-shadow: 0 0 10px #1aeeef;
+}
+
+.games .cardBx {
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.games .cardBx .card {
+  width: 280px;
+  border-radius: 10px;
+  margin: 20px 40px;
+  background: #171370;
+  overflow: hidden;
+}
+
+.games .cardBx .card img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.games .cardBx .card .content {
+  padding: 10px;
+}
+
+.games .cardBx .card .content h4 {
+  color: #fff;
+  margin: 15px 0;
+}
+
+.games .cardBx .card .process-line {
+  position: relative;
+  height: 10px;
+  width: 100%;
+  background: #35407e;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  transform: scaleX(0);
+  transform-origin: left;
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+.games .cardBx .card .process-line span {
+  position: absolute;
+  height: 100%;
+  width: 80%;
+  border-radius: 10px;
+  background: #1aeeef;
+  box-shadow: 0 0 10px #1aeeef;
+  transform-origin: left;
+  transform: scaleX(0);
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+}
+
+@keyframes animate {
+  100% {
     transform: scaleX(1);
-    transform-origin: left;
+  }
+}
+
+.games .cardBx .card .info {
+  border-top: 2px solid #35407e;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.games .cardBx .card .info p {
+  font-size: 1em;
+  color: #fff;
+}
+
+.games .cardBx .card .info p span {
+    color: #1aeeef;
+}
+
+.games .cardBx .card .info a {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 20px 0;
+    border: 1px solid #1aeeef;
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 5px;
+    color: #fff;
+    letter-spacing: 1px;
   }
   
-  .games .cardBx .card .process-line span{
-      position: absolute;
-      height: 100%;
-      width: 80%;
-      border-radius: 10px;
-      background: #1aeeef;
-      box-shadow: 0 0 10px #1aeeef;
-      transform-origin: left;
+  .games .cardBx .card .info a:hover {
+    background: #1aeeef;
+    border: none;
+    color: #171370;
+    box-shadow: 0 0 10px #1aeeef;
   }
-  {}
