--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -246,6 +246,7 @@ header .action .searchBx input {
   width: 100%;
   min-height: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
