--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -1,3 +1,12 @@
+:root {
+/* Color pallet options 1 (match login background) */
+  --deep-champagne: #FFD699;
+  --congo_pink: #FF8380;
+  --persian-rose: #F2379A;
+  --steel-blue: #567D9A;
+  --spanish-violet: #452386;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,15 +15,15 @@
 }
 
 body {
-  background: #171370;
+  background:var(--spanish-violet);
 }
 /* Scroll Bar */
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 3px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #1aeeef;
+  background: var(--congo_pink);
   border-radius: 6px;
 }
 
@@ -27,13 +36,13 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #1b2141;
+  background: var(--steel-blue);
   transition: 0.5s;
   z-index: 1000;
 }
 
 header.sticky {
-  background: #1b2141;
+  background: var(--steel-blue);
   box-shadow: 0 5px 10px rgba(249, 248, 248, 0.201);
 }
 
@@ -64,9 +73,9 @@ header ul li a {
 }
 
 header ul li a:hover {
-  background: #1aeeef;
+  background: var(--congo_pink);
   color: black;
-  box-shadow: 0 0 10px #1aeeef;
+  box-shadow: 0 0 10px var(--congo_pink);
 }
 
 header .action .searchBx {
@@ -114,7 +123,7 @@ header .action .searchBx input {
 .banner .bg .content {
   width: 60%;
   height: 100%;
-  background: rgb(27 33 65 / 50%);
+  background: rgba(16, 21, 52, 0.5);
   padding: 20px;
   z-index: 1;
   border-radius: 10px;
@@ -136,7 +145,7 @@ header .action .searchBx input {
   display: inline-block;
   padding: 10px 20px;
   margin: 20px 0;
-  border: 1px solid #1aeeef;
+  border: 1px solid var(--congo_pink);
   text-decoration: none;
   font-weight: 700;
   border-radius: 5px;
@@ -145,14 +154,15 @@ header .action .searchBx input {
 }
 
 .banner .bg .content a:hover {
-  background: #1aeeef;
+  background: var(--congo_pink);
   border: none;
-  color: #171370;
-  box-shadow: 0 0 10px #1aeeef;
+  color:var(--spanish-violet);
+  box-shadow: 0 0 10px var(--congo_pink);
 }
 
 .banner .bg img {
-  width: 500px;
+  padding-top: 80px;
+  width: 400px;
   height: 650px;
   position: absolute;
 }
@@ -169,6 +179,11 @@ header .action .searchBx input {
   align-items: center;
 }
 
+.about img{
+  width: 500px;
+  height: 450px;
+  
+}
 .about .contentBx {
   width: 50%;
   margin: 20px;
@@ -190,7 +205,7 @@ header .action .searchBx input {
   display: inline-block;
   padding: 10px 20px;
   margin: 20px 0;
-  border: 1px solid #1aeeef;
+  border: 1px solid var(--congo_pink);
   text-decoration: none;
   font-weight: 700;
   border-radius: 5px;
@@ -199,10 +214,10 @@ header .action .searchBx input {
 }
 
 .about .contentBx a:hover {
-  background: #1aeeef;
+  background: var(--congo_pink);
   border: none;
-  color: #171370;
-  box-shadow: 0 0 10px #1aeeef;
+  color:var(--spanish-violet);
+  box-shadow: 0 0 10px var(--congo_pink);
 }
 
 /* Games */
@@ -242,9 +257,9 @@ header .action .searchBx input {
 }
 
 .games ul li.active {
-  background: #1aeeef;
+  background: var(--congo_pink);
   color: #050e2d;
-  box-shadow: 0 0 10px #1aeeef;
+  box-shadow: 0 0 10px var(--congo_pink);
 }
 
 .games .cardBx {
@@ -260,7 +275,7 @@ header .action .searchBx input {
   width: 280px;
   border-radius: 10px;
   margin: 20px 40px;
-  background: #171370;
+  background:var(--spanish-violet);
   overflow: hidden;
 }
 
@@ -283,7 +298,7 @@ header .action .searchBx input {
   position: relative;
   height: 10px;
   width: 100%;
-  background: #35407e;
+  background: var(--steel-blue);
   margin-bottom: 15px;
   border-radius: 10px;
   transform: scaleX(0);
@@ -296,8 +311,8 @@ header .action .searchBx input {
   height: 100%;
   width: 80%;
   border-radius: 10px;
-  background: #1aeeef;
-  box-shadow: 0 0 10px #1aeeef;
+  background: var(--congo_pink);
+  box-shadow: 0 0 10px var(--congo_pink);
   transform-origin: left;
   transform: scaleX(0);
   animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
@@ -310,7 +325,7 @@ header .action .searchBx input {
 }
 
 .games .cardBx .card .info {
-  border-top: 2px solid #35407e;
+  border-top: 2px solid var(--steel-blue);
   padding: 5px;
   display: flex;
   justify-content: space-between;
@@ -323,14 +338,14 @@ header .action .searchBx input {
 }
 
 .games .cardBx .card .info p span {
-  color: #1aeeef;
+  color: var(--congo_pink);
 }
 
 .games .cardBx .card .info a {
   display: inline-block;
   padding: 10px 20px;
   margin: 20px 0;
-  border: 1px solid #1aeeef;
+  border: 1px solid var(--congo_pink);
   text-decoration: none;
   font-weight: 700;
   border-radius: 5px;
@@ -339,10 +354,10 @@ header .action .searchBx input {
 }
 
 .games .cardBx .card .info a:hover {
-  background: #1aeeef;
+  background: var(--congo_pink);
   border: none;
-  color: #171370;
-  box-shadow: 0 0 10px #1aeeef;
+  color:var(--spanish-violet);
+  box-shadow: 0 0 10px var(--congo_pink);
 }
 
 .games .cardBx .card.hide {
@@ -361,7 +376,7 @@ header .action .searchBx input {
     left: 0;
     right: 0;
     bottom: 0;
-    background: #171370;
+    background:var(--spanish-violet);
     display: flex;
     justify-content: center;
     align-items: center;
