--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -36,8 +36,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--steel-blue);
-  transition: 0.5s;
+  background: var(--congo_pink);
+  transition: 0.1s;
   z-index: 1000;
 }
 
@@ -66,7 +66,7 @@ header ul li {
 }
 
 header ul li a {
-  color: #fff;
+  color: rgb(5, 0, 0);
   text-decoration: none;
   padding: 10px 20px;
   border-radius: 5px;
@@ -98,6 +98,7 @@ header .action .searchBx input {
   font-size: 1em;
   color: #222;
 }
+
 
 /* Home Banner */
 
@@ -167,6 +168,7 @@ header .action .searchBx input {
   position: absolute;
 }
 
+
 /* About */
 
 .about {
@@ -219,6 +221,7 @@ header .action .searchBx input {
   color:var(--spanish-violet);
   box-shadow: 0 0 10px var(--congo_pink);
 }
+
 
 /* Games */
 
@@ -363,6 +366,7 @@ header .action .searchBx input {
 .games .cardBx .card.hide {
   display: none;
 }
+
 
 /* Responsive Page*/
 
