--- a/views/game-page.handlebars
+++ b/views/game-page.handlebars
@@ -1,5 +1,3 @@
-{{#each games as|game| }}
-
 <div>
     <div class="game-picture">
         <img src="..public\assets\img\video-game-placeholder.webp">
@@ -12,22 +10,11 @@
 </div>
 
 <div class="game-blog">
+    {{#each game-posts as |game-posts|}}
     <div class="game-posts" id="post-1">
         <p>
         
         </p>
     </div>
-    <div class="game-posts" id="post-1">
-        <p>
-            
-        </p>
-    </div>
-    <div class="game-posts" id="post-1">
-        <p>
-            
-        </p>
-    </div>
+    {{/each}}
 </div>
-
-
-{{/each}}
