--- a/public/assets/css/user.css
+++ b/public/assets/css/user.css
@@ -63,10 +63,98 @@
     background-color: #FF8380;
 }
 
-.game {
-    height: 400px;
-    width: 400px;
-    outline: 1px solid black;
-    margin: 2% 4% 2% 4%;
-    background-color: #567D9A;
-}
+.games {
+    padding: 0px 100px;
+    width: 100%;
+    min-width: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 40px auto;
+  }
+  
+  .games h2 {
+    color: #fff;
+    margin: 10px 0;
+  }
+  
+  .games ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
+  
+  .games ul li {
+    list-style: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 5px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    color: #fff;
+  }
+  
+  .games ul li.active {
+    background: var(--congo_pink);
+    color: #050e2d;
+    box-shadow: 0 0 10px var(--congo_pink);
+  }
+  
+  .games .cardBx {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .games .cardBx .card {
+    width: 280px;
+    border-radius: 10px;
+    margin: 20px 40px;
+    background:var(--spanish-violet);
+    overflow: hidden;
+  }
+  
+  .games .cardBx .card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
+  
+  .games .cardBx .card .content {
+    padding: 10px;
+  }
+  
+  .games .cardBx .card .content h4 {
+    color: #fff;
+    margin: 15px 0;
+  }
+  
+  .games .cardBx .card .process-line {
+    position: relative;
+    height: 10px;
+    width: 100%;
+    background: var(--steel-blue);
+    margin-bottom: 15px;
+    border-radius: 10px;
+    transform: scaleX(0);
+    transform-origin: left;
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+  }
+  
+  .games .cardBx .card .process-line span {
+    position: absolute;
+    height: 100%;
+    width: 80%;
+    border-radius: 10px;
+    background: var(--congo_pink);
+    box-shadow: 0 0 10px var(--congo_pink);
+    transform-origin: left;
+    transform: scaleX(0);
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+  }
