--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 
   <body>
     <header>
-      <a href="#" class="logo">Gammers</a>
+      <a href="#" class="logo">Gamers</a>
       <ul class="nav">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
