--- a/public/assets/css/user.css
+++ b/public/assets/css/user.css
@@ -132,3 +132,148 @@ nav h2 {
 .sub-menu-link:hover p{
     font-weight: 600;
 }
+
+/* Games */
+
+.games {
+    padding: 0px 100px;
+    width: 100%;
+    min-width: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 40px auto;
+  }
+  
+  .games h2 {
+    color: #fff;
+    margin: 10px 0;
+  }
+  
+  .games ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
+  
+  .games ul li {
+    list-style: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 5px;
+    letter-spacing: 1px;
+    cursor: pointer;
+    color: #fff;
+  }
+  
+  .games ul li.active {
+    background: var(--congo_pink);
+    color: #050e2d;
+    box-shadow: 0 0 10px var(--congo_pink);
+  }
+  
+  .games .cardBx {
+    width: 100%;
+    min-height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .games .cardBx .card {
+    width: 280px;
+    border-radius: 10px;
+    margin: 20px 40px;
+    background:var(--spanish-violet);
+    overflow: hidden;
+  }
+  
+  .games .cardBx .card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
+  
+  .games .cardBx .card .content {
+    padding: 10px;
+  }
+  
+  .games .cardBx .card .content h4 {
+    color: #fff;
+    margin: 15px 0;
+  }
+  
+  .games .cardBx .card .process-line {
+    position: relative;
+    height: 10px;
+    width: 100%;
+    background: var(--steel-blue);
+    margin-bottom: 15px;
+    border-radius: 10px;
+    transform: scaleX(0);
+    transform-origin: left;
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+  }
+  
+  .games .cardBx .card .process-line span {
+    position: absolute;
+    height: 100%;
+    width: 80%;
+    border-radius: 10px;
+    background: var(--congo_pink);
+    box-shadow: 0 0 10px var(--congo_pink);
+    transform-origin: left;
+    transform: scaleX(0);
+    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
+  }
+  
+  @keyframes animate {
+    100% {
+      transform: scaleX(1);
+    }
+  }
+  
+  .games .cardBx .card .info {
+    border-top: 2px solid var(--steel-blue);
+    padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .games .cardBx .card .info p {
+    font-size: 1em;
+    color: #fff;
+  }
+  
+  .games .cardBx .card .info p span {
+    color: var(--congo_pink);
+  }
+  
+  .games .cardBx .card .info a {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 20px 0;
+    border: 1px solid var(--congo_pink);
+    text-decoration: none;
+    font-weight: 700;
+    border-radius: 5px;
+    color: #fff;
+    letter-spacing: 1px;
+  }
+  
+  .games .cardBx .card .info a:hover {
+    background: var(--congo_pink);
+    border: none;
+    color:var(--spanish-violet);
+    box-shadow: 0 0 10px var(--congo_pink);
+  }
+  
+  .games .cardBx .card.hide {
+    display: none;
+  }
+  
