--- a/public/assets/css/gamepage.css
+++ b/public/assets/css/gamepage.css
@@ -14,6 +14,7 @@
   display: flex;
   justify-content: center;
   padding-top: 190px;
+  flex-wrap: wrap;
 }
 .card {
   background-color: var(--steel-blue);
