--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 :root {
 /* Color pallet options 1 (match login background) */
   --deep-champagne: #FFD699;
@@ -5,6 +9,7 @@
   --persian-rose: #F2379A;
   --steel-blue: #567D9A;
   --spanish-violet: #452386;
+  --fonts: monospace;
 }
 
 * {
@@ -368,6 +373,95 @@ header .action .searchBx input {
   display: none;
 }
 
+.navbar {
+  display: flex;
+  border: 1px solid black;
+  height: 80px;
+  background-color: var(--deep-champagne);
+}
+
+/* defines home icon size and position inside of navbar */
+.home-btn {
+  background-image: url(../img/home-icon.png);
+  height: 80px;
+  width: 80px;
+  background-repeat: no-repeat;
+}
+
+
+
+.flexbox-container1 {
+  display: flex;
+  border: 1px solid black;
+  height: 450px;
+  margin: 8% 8% 3% 8%;
+  background-color: #FF8380;
+}
+
+.flexbox-profile-pic {
+  border: 1px solid black;
+  flex-grow: 1;
+  margin: 2% 5% 2% 2%;
+  background-color: #567D9A;
+  max-width: 35%;
+}
+
+.flexbox-info {
+  border: 1px solid black;
+  flex-grow: 1;
+  margin: 2% 2% 2% 5%;
+  background-color: #567D9A;
+  max-width: 50%;
+  font-size: 25px;
+}
+
+.flexbox-container2 {
+  min-height: 630px;
+  border: 1px solid black;
+  margin: 3% 8% 8% 8% ;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: #FF8380;
+}
+
+.game {
+  height: 400px;
+  width: 400px;
+  outline: 1px solid black;
+  margin: 2% 4% 2% 4%;
+  background-color: #567D9A;
+}
+
+#profile-picture {
+  max-height: 150%;
+  max-width: 90%;
+  display: flex;
+  justify-content: center;
+  margin-left: 20px;
+}
+
+#name {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  font-family: var(--fonts);
+}
+
+h3 {
+  display: flex;
+  justify-content: center;
+  font-family: var(--fonts);
+  margin-bottom: 15px;
+}
+
+p {
+  font-family: var(--fonts);
+  font-size: 22px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 
 /* Responsive Page*/
 
@@ -414,3 +508,4 @@ header .action .searchBx input {
     background-repeat: no-repeat;
   }
 }
+
