--- a/public/assets/css/gamepage.css
+++ b/public/assets/css/gamepage.css
@@ -9,6 +9,147 @@
 }
 
 /* defines home icon size and position inside of navbar */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 7px 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--congo_pink);
+  transition: 0.1s;
+  z-index: 1000;
+}
+
+header.sticky {
+  background: var(--steel-blue);
+  box-shadow: 0 5px 10px rgba(249, 248, 248, 0.201);
+}
+
+header .logo {
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+  font-size: 2em;
+  font-weight: 700;
+}
+
+header .nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header ul li {
+  list-style: none;
+  margin: 10px;
+}
+
+header ul li a {
+  color: rgb(5, 0, 0);
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+header ul li a:hover {
+  background: var(--congo_pink);
+  color: black;
+  box-shadow: 0 0 10px var(--congo_pink);
+}
+
+header .action .searchBx {
+  padding: 5px;
+  margin: 5px;
+  justify-content: center;
+  background: #fff;
+  border-radius: 5px;
+}
+
+header .action .searchBx i {
+  font-size: 1.4em;
+  margin: 5px;
+  color: #222;
+}
+
+header .action .searchBx input {
+  outline: none;
+  border: none;
+  font-size: 1em;
+  color: #222;
+}
+
+
+/* Home Banner */
+
+.banner {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+
+.banner .bg {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner .bg .content {
+  width: 60%;
+  height: 100%;
+  background: rgba(16, 21, 52, 0.5);
+  padding: 20px;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.banner .bg .content h2 {
+  font-size: 1em;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.banner .bg .content p {
+  font-size: 1em;
+  color: #dbd9d9;
+  letter-spacing: 1px;
+}
+
+.banner .bg .content a {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border: 1px solid var(--congo_pink);
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 5px;
+  color: #fff;
+  letter-spacing: 1px;
+}
+
+.banner .bg .content a:hover {
+  background: var(--congo_pink);
+  border: none;
+  color:var(--spanish-violet);
+  box-shadow: 0 0 10px var(--congo_pink);
+}
+
+.banner .bg img {
+  padding-top: 80px;
+  width: 400px;
+  height: 650px;
+  position: absolute;
+}
 
 .container {
   display: flex;
@@ -21,10 +162,9 @@
   width: 720px;
   margin: 10px;
   border-radius: 15px;
-  
 }
 .card-image {
-  height: 170px;
+  height: 450px;
   margin-bottom: 15px;
   background-size: cover;
   border-radius: 15px 15px 0 0;
@@ -41,6 +181,18 @@
 .card-3 {
   background-image: url(../img/game-3.jfif);
 }
+.card-4 {
+  background-image: url(../img/game-4.jfif);
+}
+
+
+
+.card-6 {
+  background-image: url(../img/game-7.jpg);
+}
+.card-7 {
+  background-image: url(../img/game-9.jfif);
+}
 
 .card p {
   padding: 10px;
@@ -55,11 +207,11 @@
   margin: 20px 50px;
 }
 
-.card:hover{
+.card:hover {
   background: rgb(22, 114, 167);
   color: var(--deep-champagne);
   cursor: pointer;
-  transform: scale(1.03); 
+  transform: scale(1.03);
   transition: all 0.3s ease-in-out;
 }
 
